--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Registro</title>
-    <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./styles.css">
   </head>
   <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg bg-body-tertiary" id="scroll">
@@ -31,15 +31,15 @@
               </li>
             </ul>
             <form class="d-flex" role="search">
-              <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-              <button class="btn btn-outline-success" type="submit">Search</button>
+                <input class="form-control me-2" type="buscar" placeholder="Buscar publicación" aria-label="Buscar">
+                <button class="btn btn-outline-success" type="submit">Buscar</button>
             </form>
           </div>
         </div>
       </nav>
     <div class="container">
         <form class="row g-3 mt-3">
-            <div id="tituloindex"><h1>Registro de usuario</h1></div>
+            <div id="titulo"><h1><b>Registro de Usuario</b></h1></div>
             <div class="col-6">
                 <label for="inputName" class="form-label">Nombre(s)</label>
                 <input type="text" class="form-control" id="inputName" placeholder="Escribe tu(s) nombre(s)">
@@ -76,13 +76,17 @@
                 <button type="submit" class="btn btn-primary">Registrarme</button>
             </div>
         </form>
+        <br>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="./css/bootstrap.min.js"></script>
   </body>
   <footer class="mt-auto" id="footer">
-    <h6>Autores</h6>
-    <h6>Juan Gerardo Alanís Delgado</h6>
-    <h6>Daniel</h6>
+    <hr>
+    <b>Autores</b>
+    <br>
+    <b>Juan Gerardo Alanís Delgado</b>
+    <br>
+    <b>Daniel Guillermo Ipiña Lozano</b>
   </footer>
 </html>
