--- a/login.html
+++ b/login.html
@@ -5,13 +5,41 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Bootstrap demo</title>
-    <link rel="stylesheet" href="./styles.css">
     <link rel="stylesheet" href="./css/bootstrap.min.css">
+    <link rel="stylesheet" href="./styles.css">
   </head>
   <body>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary" id="scroll">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Bootstrap_logo.svg/1200px-Bootstrap_logo.svg.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
+            Avatallar
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarScroll">
+            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Registro</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Inicio</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Búsqueda Avanzada</a>
+              </li>
+            </ul>
+            <form class="d-flex" role="buscar">
+              <input class="form-control me-2" type="buscar" placeholder="Buscar publicación" aria-label="Buscar">
+              <button class="btn btn-outline-success" type="submit">Buscar</button>
+            </form>
+          </div>
+        </div>
+      </nav>
     <div class="container">
         <form class="row g-3 mt-3">
-            <h1>Registro de usuario</h1>
+            <div id="titulo"><h1><b>Ingreso de Usuario</b></h1></div>
             <div class="col-12">
                 <label for="inputUser" class="form-label">Nombre de Usuario</label>
                 <input type="text" class="form-control" id="inputUser" placeholder="Escribe tu nombre de usuario">
@@ -24,13 +52,17 @@
                 <button type="submit" class="btn btn-primary">Ingresar</button>
             </div>
         </form>
+        <br>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js" integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN" crossorigin="anonymous"></script>
     <script src="./css/bootstrap.min.js"></script>
   </body>
   <footer class="mt-auto" id="footer">
-    <h6>Autores</h6>
-    <h6>Juan Gerardo Alanís Delgado</h6>
-    <h6>Daniel</h6>
+    <hr>
+    <b>Autores</b>
+    <br>
+    <b>Juan Gerardo Alanís Delgado</b>
+    <br>
+    <b>Daniel Guillermo Ipiña Lozano</b>
   </footer>
 </html>
