--- a/login.html
+++ b/login.html
@@ -4,16 +4,16 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Bootstrap demo</title>
+    <title>Ingresar - Postit</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./styles.css">
   </head>
-  <body>
+  <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg bg-body-tertiary" id="scroll">
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Bootstrap_logo.svg/1200px-Bootstrap_logo.svg.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-            Avatallar
+            Postit
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -24,7 +24,7 @@
                 <a class="nav-link active" aria-current="page" href="#">Registro</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="#">Inicio</a>
+                <a class="nav-link" href="#">Dashboard</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Búsqueda Avanzada</a>
@@ -58,7 +58,6 @@
     <script src="./css/bootstrap.min.js"></script>
   </body>
   <footer class="mt-auto" id="footer">
-    <hr>
     <b>Autores</b>
     <br>
     <b>Juan Gerardo Alanís Delgado</b>
