--- a/perfil.html
+++ b/perfil.html
@@ -13,7 +13,7 @@
         <div class="container-fluid">
           <a class="navbar-brand" href="#">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Bootstrap_logo.svg/1200px-Bootstrap_logo.svg.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-            Postit
+            PostIt
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
@@ -21,7 +21,9 @@
           <div class="collapse navbar-collapse" id="navbarScroll">
             <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
               <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Registro</a>
+                <a class="nav-link active" aria-current="page" href="#">
+                    <img src="./media/amogus.jpg" alt="ProfilePic" width="24" height="24" class="d-inline-block align-text-top">
+                    Registro/Mi nombre</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Dashboard</a>
@@ -44,10 +46,10 @@
       </div>
     <div class="container" id="IdInfo">
         <span class="row g-3 mt-3">
-            <div class="col-5">
-                <img id="IdPerfil" src="https://play-lh.googleusercontent.com/8ddL1kuoNUB5vUvgDVjYY3_6HwQcrg1K2fd_R8soD-e2QYj8fT9cfhfh3G0hnSruLKec" alt="">
+            <div class="col-4">
+                <img id="IdPerfil" src="./media/amogus.jpg" alt="Foto de perfil" height="300" width="300">
             </div>
-            <div class="col-7">
+            <div class="col-8">
                 <h1><b>Reflejar mi nombre de usuario</b></h1>
                 <hr>
                 <h4><b>Nombre(s): </b>Reflejar mi(s) nombre(s)</h4>
