--- a/crearpost.html
+++ b/crearpost.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Registrar - Postit</title>
+    <title>Crear PostIt - Postit</title>
     <link rel="stylesheet" href="./css/bootstrap.min.css">
     <link rel="stylesheet" href="./styles.css">
   </head>
@@ -41,45 +41,29 @@
       </nav>
       <div class="container" id="titulo">
         <span class="row g-3 mt-3">
-            <h1><b>Registrar</b></h1></div>
+            <h1><b>Crear PostIt</b></h1></div>
         </span>
       </div>
     <div class="container">
         <form class="row g-3 mt-3">
-            <div class="col-6">
-                <label for="inputName" class="form-label">Nombre(s)</label>
-                <input type="text" class="form-control" id="inputName" placeholder="Escribe tu(s) nombre(s)">
+            <div class="col-12">
+                <label for="inputUser" class="form-label">Título de PostIt:</label>
+                <input type="text" class="form-control" id="inputPost" placeholder="Mi historia de hoy">
+            </div>
+            <div class="col-12">
+                <label for="inputPass" class="form-label">Descripción:</label>
+                <input type="text" class="form-control" id="inputDesc" placeholder="Hace unas horas...">
             </div>
             <div class="col-6">
-                <label for="inputLastName" class="form-label">Apellidos</label>
-                <input type="text" class="form-control" id="inputLastName" placeholder="Escribe tus apellidos">
+                <label for="inputPass" class="form-label">Categorías:</label>
+                <input type="text" class="form-control" id="inputCat" placeholder="Escribe las categorías y separalas con comas">
             </div>
             <div class="col-6">
-                <label for="inputDate" class="form-label">Fecha de Nacimiento</label>
-                <input type="date" class="form-control" id="inputDate">
-            </div>
-            <div class="col-6">
-                <label for="emailInput" class="form-label">Correo Electronico</label>
-                <input type="email" class="form-control" id="emailInput" placeholder="Escribe tu correo">
-            </div>
-            <div class="col-6">
-                <label for="inputUser" class="form-label">Nombre de Usuario</label>
-                <input type="text" class="form-control" id="inputUser" placeholder="Escribe tu nombre de usuario">
-            </div>
-            <div class="col-6">
-                <label for="inputPass" class="form-label">Contraseña</label>
-                <input type="password" class="form-control" id="inputPass" placeholder="Escribe tu contraseña">
-            </div>
-            <div class="col-6">
-                <label for="inputPass2" class="form-label">Confirmar Contraseña</label>
-                <input type="password2" class="form-control" id="inputPass2" placeholder="Confirma tu contraseña">
-            </div>
-            <div class="col-6">
-                <label for="inputImg" class="form-label">Foto de Perfil</label>
+                <label for="inputPass" class="form-label">Multimedia (opcional):</label>
                 <input type="file" class="form-control" id="inputFile">
             </div>
             <div class="col-12">
-                <button type="submit" class="btn btn-primary">Registrar</button>
+                <button type="submit" class="btn btn-primary">Crear PostIt</button>
             </div>
         </form>
         <br>
@@ -88,7 +72,6 @@
     <script src="./css/bootstrap.min.js"></script>
   </body>
   <footer class="mt-auto" id="footer">
-
     <b>Autores</b>
     <br>
     <b>Juan Gerardo Alanís Delgado</b>
