--- a/crearpost.html
+++ b/crearpost.html
@@ -63,7 +63,7 @@
                 <input type="file" class="form-control" id="inputFile">
             </div>
             <div class="col-12">
-                <button type="submit" class="btn btn-primary">Crear PostIt</button>
+                <button type="submit" class="btn btn-primary">Publicar</button>
             </div>
         </form>
         <br>
