--- a/perfil.html
+++ b/perfil.html
@@ -10,34 +10,34 @@
   </head>
   <body class="d-flex flex-column min-vh-100">
     <nav class="navbar navbar-expand-lg bg-body-tertiary" id="scroll">
-        <div class="container-fluid">
-          <a class="navbar-brand" href="#">
-            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b2/Bootstrap_logo.svg/1200px-Bootstrap_logo.svg.png" alt="Logo" width="30" height="24" class="d-inline-block align-text-top">
-            PostIt
-          </a>
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse" id="navbarScroll">
-            <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">
-                    <img src="./media/amogus.jpg" alt="ProfilePic" width="24" height="24" class="d-inline-block align-text-top">
-                    Registro/Mi nombre</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Dashboard</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="#">Búsqueda Avanzada</a>
-              </li>
-            </ul>
-            <form class="d-flex" role="buscar">
-              <input class="form-control me-2" type="buscar" placeholder="Buscar publicación" aria-label="Buscar">
-              <button class="btn btn-outline-success" type="submit">Buscar</button>
-            </form>
-          </div>
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src="./media/logo.png" alt="Logo" width="24" height="24" class="d-inline-block align-text-top">
+          PostIt
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarScroll" aria-controls="navbarScroll" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarScroll">
+          <ul class="navbar-nav me-auto my-2 my-lg-0 navbar-nav-scroll" style="--bs-scroll-height: 100px;">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">
+                  <img src="./media/profile.jpg" alt="ProfilePic" width="24" height="24" class="d-inline-block align-text-center">
+                  Registro/Mi nombre</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Dashboard</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Búsqueda Avanzada</a>
+            </li>
+          </ul>
+          <form class="d-flex" role="buscar">
+            <input class="form-control me-2" type="buscar" placeholder="Buscar publicación" aria-label="Buscar">
+            <button class="btn btn-outline-success" type="submit">Buscar</button>
+          </form>
         </div>
+      </div>
       </nav>
       <div class="container" id="titulo">
         <span class="row g-3 mt-3">
@@ -47,7 +47,7 @@
     <div class="container" id="IdInfo">
         <span class="row g-3 mt-3">
             <div class="col-4">
-                <img id="IdPerfil" src="./media/amogus.jpg" alt="Foto de perfil" height="300" width="300">
+                <img id="IdPerfil" src="./media/profile.jpg" alt="Foto de perfil" height="300" width="300">
             </div>
             <div class="col-8">
                 <h1><b>Reflejar mi nombre de usuario</b></h1>
